fixes bug 201040 "Unable to view page source of the page that uses IDN" r=biesi